# RAG_summary_expample

./: .env.template  .gitignore  Dockerfile  Dockerfile.chunk_summarizer_worker  Dockerfile.chunker_worker  Dockerfile.full_summarizer_worker  Makefile  README.md  compose.yml  pyproject.toml
src/: alembic.ini  main.py
src/alembic/: env.py
src/alembic/versions/: 2026_01_30_0430-d6101c10c064_.py
src/api/: document.py
src/api/dependencies/: app_dependency.py  database.py
src/config/: configs.py
src/constants/: doc_status.py
src/databases/: database.py
src/models/: __init__.py  chunk.py  document.py
src/repositories/: base.py  chunc.py  chunk.py  document.py
src/schemas/: __init__.py  chunk.py  document.py  events.py  pagination.py
src/services/: ai.py  chunk.py  client.py  consumer.py  document.py  producer.py  search.py  splitter.py  state.py  storage.py  summarizer.py  text_extractor.py
src/utils/: logger.py  promt.py
src/utils/errors/: api_errors.py  other_errors.py
src/workers/: chunk_summary_worker.py  chunker_worker.py  full_summary_worker.py
